--- a/website/style.css
+++ b/website/style.css
@@ -19,7 +19,7 @@ body{
     min-height:100vh;
     justify-content: flex-start;
     align-items: flex-start;
-    max-width: 1200px;
+    max-width: 80vw;
     margin: 0 auto;
 }
 
@@ -29,8 +29,8 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    align-items: flex-start;
+    /* flex-wrap: wrap; */
 }
 
 
@@ -100,7 +100,7 @@ body{
 #entry-container{
     
     /* padding: 1rem; */
-    display: none;
+    /* display: none; */
     max-width: 500px;
     border-radius: 5px;
 }
